<resources>
    <string name="app_name">PROMEDIUN</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_horadio">Horario</string>
    <string name="menu_boleta_de_notas">Boleta de notas</string>
    <string name="menu_ajustes">Ajustes</string>
    <string name="menu_notas">Notas</string>
    <string name="modo">MODO</string>
    <string name="mis_notas">MIS NOTAS</string>
    <string name="pc_1">PC 1</string>
    <string name="pc_2">PC 2</string>
    <string name="pc_3">PC 3</string>
    <string name="pc_4">PC 4</string>
    <string name="parcial">PARCIAL</string>
    <string name="examen_final">EXAMEN FINAL</string>
    <string name="calcular">CALCULAR</string>
    <string name="nuevo">NUEVO</string>
    <string name="completar">COMPLETAR</string>
</resources>